Improve promo card mobile CTA visibility

--- a/web.html
+++ b/web.html
@@ -1,589 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>El Mexiquense Market — Frescura y Sabor Auténtico</title>
-  <style>
-    :root {
-      --verde-mex: #1D8445;
-      --rojo-fuego: #D45438;
-      --blanco-crema: #FAFAFA;
-      --texto: #2D2D2D;
-      --texto-claro: #6B6B6B;
-      --shadow-soft: 0 4px 12px rgba(0, 0, 0, 0.1);
-      --promo-gap: clamp(1rem, 2.8vw, 1.6rem);
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: "Poppins", "Segoe UI", Arial, sans-serif;
-      background: var(--blanco-crema);
-      color: var(--texto);
-      overflow-x: hidden;
-    }
-
-     a {
-      color: inherit;
-      text-decoration: none;
-    }
-    
-    /* === NAV === */
-    header {
-    osition: sticky;
-      top: 0;
-      z-index: 999;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    }
-    
-    .nav { 
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0.8rem 1rem;
-    }
-
-    logo {
-      font-weight: 600;
-      color: var(--verde-mex);
-      font-size: 1.2rem;
-    }
-
-    .menu {
-      display: flex;
-      gap: 1rem;
-    }
-
-    .menu a {
-      padding: 0.5rem 0.9rem;
-      border-radius: 999px;
-      transition: 0.3s;
-    }
-
-    .menu a:hover {
-      background: rgba(29, 132, 69, 0.1);
-    }
-
-    .hamb {
-      display: none;
-      flex-direction: column;
-      gap: 5px;
-      cursor: pointer;
-    }
-
-    hamb span {
-      width: 28px;
-      height: 3px;
-      background: var(--texto);
-      border-radius: 2px;
-    }
-
-    @media (max-width: 768px) {
-      .menu {
-      display: none;
-        flex-direction: column;
-        position: absolute;
-        left: 0;
-        top: 100%;
-        width: 100%;
-        background: white;
-        border-radius: 0 0 12px 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      .menu.show {
-        display: flex;
-      }
-
-      .hamb {
-        display: flex;
-      }
-    }
-
-    /* === HERO === */
-    .hero {
-      background: linear-gradient(135deg, var(--verde-mex), var(--rojo-fuego));
-      color: white; 
-      text-align:center;
-      padding: 4rem 1rem;
-    }
-
-    .hero h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .hero p {
-      font-size: 1.1rem;
-      font-weight: 300;
-      margin-bottom: 1.5rem;
-    }
-
-    .btn {
-      display: inline-block;
-      background: var(--verde-mex);
-      color: white;
-      padding: 0.7rem 1.2rem;
-      border-radius: 999px;
-      transition: 0.3s;
-      font-weight: 600;
-    }
-
-    .btn:hover {
-      background: var(--rojo-fuego);
-    }
-
-    /* === CARRUSEL TARJETAS PROMOCIONALES === */
-    #promociones {
-      background: var(--blanco-crema);
-      padding: clamp(2.5rem, 6vw, 4rem) 1.5rem;
-    }
-
-    .promos-shell {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: clamp(1.5rem, 4vw, 2.5rem);
-    }
-
-    .promos-head {
-      text-align: center;
-    }
-
-    .promos-head span {
-      display: inline-block;
-      font-size: 0.75rem;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      color: var(--rojo-fuego);
-      font-weight: 600;
-      margin-bottom: 0.4rem;
-    }
-
-    .promos-head h2 {
-      font-size: clamp(1.8rem, 4vw, 2.5rem);
-      color: var(--verde-mex);
-      margin-bottom: 0.4rem;
-    }
-
-    .promos-head p {
-      color: var(--texto-claro);
-      max-width: 620px;
-      margin: 0.4rem auto 0;
-    }
-
-    .promos-carousel {
-      position: relative;
-    }
-
-    .promos-track {
-      --card-width: min(88vw, 340px);
-      display: flex;
-      gap: var(--promo-gap);
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      padding: 0 calc((100% - var(--card-width)) / 2) 0.75rem;
-      scroll-padding-inline: calc((100% - var(--card-width)) / 2);
-      -webkit-overflow-scrolling: touch;
-      scrollbar-width: thin;
-      scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
-    }
-
-    .promos-track::-webkit-scrollbar {
-      height: 8px;
-    }
-
-    .promos-track::-webkit-scrollbar-thumb {
-      background: rgba(0, 0, 0, 0.2);
-      border-radius: 999px;
-    }
-
-    .promo-card {
-      flex: 0 0 var(--card-width);
-      max-width: var(--card-width);
-      background: white;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: var(--shadow-soft);
-      display: grid;
-      grid-template-rows: 1fr 1fr;
-      aspect-ratio: 3 / 4;
-      scroll-snap-align: center;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-      background: white;
-    }
-
-    .promo-card:focus-within,
-    .promo-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 12px 26px rgba(0, 0, 0, 0.16);
-    }
-
-    .promo-media {
-      overflow: hidden;
-      height: 100%;
-    }
-
-    .promo-media img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    .promo-content {
-      background: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 1.2rem;
-      gap: 0.75rem;
-      height: 100%;
-    }
-
-    .promo-tag {
-      align-self: flex-start;
-      padding: 0.2rem 0.75rem;
-      background: rgba(29, 132, 69, 0.15);
-      color: var(--verde-mex);
-      font-weight: 600;
-      font-size: 0.75rem;
-      letter-spacing: 1.2px;
-      border-radius: 999px;
-    }
-
-    .promo-content h3 {
-      font-size: 1.1rem;
-      color: var(--texto);
-      line-height: 1.3;
-    }
-
-    .promo-content p {
-      color: var(--texto-claro);
-      font-size: 0.95rem;
-      line-height: 1.5;
-      flex: 1;
-    }
-
-    .promo-btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      align-self: flex-start;
-      padding: 0.6rem 1.4rem;
-      border-radius: 999px;
-      background: var(--verde-mex);
-      color: white;
-      font-weight: 600;
-      font-size: 0.9rem;
-      transition: background 0.3s ease;
-    }
-
-    .promo-btn:hover {
-      background: var(--rojo-fuego);
-    }
-
-    .promos-nav {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-      border: none;
-      background: rgba(255, 255, 255, 0.9);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
-      color: var(--verde-mex);
-      font-size: 1.4rem;
-      cursor: pointer;
-      display: none;
-      align-items: center;
-      justify-content: center;
-      transition: background 0.3s ease, transform 0.3s ease;
-      z-index: 5;
-    }
-
-    .promos-nav:hover {
-      background: rgba(29, 132, 69, 0.9);
-      color: white;
-      transform: translateY(-50%) scale(1.05);
-    }
-
-    .promos-nav.prev {
-      left: clamp(0.5rem, 2vw, 1.5rem);
-    }
-
-    .promos-nav.next {
-      right: clamp(0.5rem, 2vw, 1.5rem);
-    }
-
-    @media (min-width: 640px) {
-      .promos-track {
-        --card-width: min(60vw, 320px);
-   }
-      }
-
-    @media (min-width: 960px) {
-      .promos-track {
-        --card-width: calc((100% - (var(--promo-gap) * 2)) / 3);
-        padding-inline: clamp(0.5rem, 2vw, 1.5rem);
-        scroll-padding-inline: clamp(0.5rem, 2vw, 1.5rem);
-      }
-
-      .promos-nav {
-        display: inline-flex;
-        }
-      }
-
-    /* === RESTO DE SECCIONES === */
-    section {
-      padding: 3rem 1rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    h2.section-title {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: var(--verde-mex);
-    }
-
-    footer {
-      text-align: center;
-      padding: 1.5rem;
-      color: #666;
-    }
-  </style>
-</head>
-
-<body>
-  <!-- === NAV === -->
-  <header>
-    <div class="nav">
-      <div class="logo">El Mexiquense Market</div>
-      <div class="hamb" id="hamb"><span></span><span></span><span></span></div>
-      <nav class="menu" id="menu">
-        <a href="#inicio">Inicio</a>
-        <a href="#promociones">Promociones</a>
-        <a href="#productos">Productos</a>
-        <a href="#ofertas">Ofertas</a>
-        <a href="#contacto">Contacto</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- === HERO === -->
-  <section class="hero" id="inicio">
-    <h1>El Sabor de México en Cada Compra</h1>
-    <p>Frescura diaria • Precios justos • Calidad garantizada</p>
-    <a href="#ofertas" class="btn">Ver Ofertas</a>
-  </section>
-
-  <!-- 🌮 CARRUSEL DE PROMOCIONES -->
-  <section id="promociones">
-    <div class="promos-shell">
-      <div class="promos-head">
-        <span>nuestras promociones</span>
-        <h2>Especiales destacados de la semana</h2>
-        <p>Tarjetas promocionales con productos frescos, servicios y eventos que no te puedes perder en El Mexiquense Market.</p>
-         </div>
-
-       <div class="promos-carousel">
-        <button class="promos-nav prev" aria-label="Anterior" type="button">&#10094;</button>
-        <div class="promos-track" id="promosTrack">
-          <article class="promo-card">
-            <div class="promo-media">
-              <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=900&q=80" alt="Frutas frescas en canastas coloridas" loading="lazy">
-            </div>
-            <div class="promo-content">
-              <span class="promo-tag">OFERTA</span>
-              <h3>Frutas frescas de temporada</h3>
-              <p>Piñas, mangos y guayabas con descuentos especiales toda la semana. ¡Llévate la frescura a casa!</p>
-              <a class="promo-btn" href="#ofertas">Ver más</a>
-            </div>
-          </article>
-
-           <article class="promo-card">
-            <div class="promo-media">
-              <img src="https://images.unsplash.com/photo-1528696892704-5e1122852276?auto=format&fit=crop&w=900&q=80" alt="Carnes marinadas listas para asar" loading="lazy">
-            </div>
-            <div class="promo-content">
-              <span class="promo-tag">PROMOCIÓN</span>
-              <h3>Carne marinada lista para la parrilla</h3>
-              <p>Preparada con recetas auténticas para un asado perfecto. Compra 2 kilos y recibe un paquete extra.</p>
-              <a class="promo-btn" href="#productos">Ver más</a>
-            </div>
-          </article> 
-
-          <article class="promo-card">
-            <div class="promo-media">
-              <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?auto=format&fit=crop&w=900&q=80" alt="Pan dulce tradicional mexicano" loading="lazy">
-            </div>
-            <div class="promo-content">
-              <span class="promo-tag">DULCERÍA</span>
-              <h3>Pan dulce recién horneado</h3>
-              <p>Conchas, orejas y cuernitos con café gratis antes de las 10 a. m. ¡Despierta con sabor casero!</p>
-              <a class="promo-btn" href="#productos">Ver más</a>
-            </div>
-          </article>
-
-          <article class="promo-card">
-            <div class="promo-media">
-              <img src="https://images.unsplash.com/photo-1618325856931-d8c3e7541f09?auto=format&fit=crop&w=900&q=80" alt="Persona enviando dinero desde el supermercado" loading="lazy">
-            </div>
-            <div class="promo-content">
-              <span class="promo-tag">SERVICIO</span>
-              <h3>Envíos de dinero sin complicaciones</h3>
-              <p>Apoya a tu familia en México y Centroamérica con transferencias seguras y tipos de cambio preferenciales.</p>
-              <a class="promo-btn" href="#contacto">Ver más</a>
-            </div>
-          </article>
-
-          <article class="promo-card">
-            <div class="promo-media">
-              <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?auto=format&fit=crop&w=900&q=80" alt="Evento culinario con degustaciones" loading="lazy">
-            </div>
-            <div class="promo-content">
-              <span class="promo-tag">EVENTO</span>
-              <h3>Degustación de salsas artesanales</h3>
-              <p>Prueba recetas familiares con ingredientes locales y vota por tu favorita este fin de semana.</p>
-              <a class="promo-btn" href="#contacto">Ver más</a>
-            </div>
-          </article>
-        </div>
-        <button class="promos-nav next" aria-label="Siguiente" type="button">&#10095;</button>
-      </div>
-    </div>
-  </section>
-
-   <!-- === RESTO DE SECCIONES SIMPLIFICADAS === -->
-   <section id="productos">
-    <h2 class="section-title">Productos Destacados</h2>
-    <p style="text-align:center;color:var(--texto-claro);">Frescura garantizada en cada compra.</p>
-  </section>
-
-  <section id="ofertas">
-    <h2 class="section-title">Ofertas del Día</h2>
-  </section>
-
-  <section id="contacto">
-    <h2 class="section-title">Contáctanos</h2>
-  </section>
-
-   <footer>© <span id="year"></span> El Mexiquense Market</footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    const hamb = document.getElementById('hamb');
-    const menu = document.getElementById('menu');
-    hamb.addEventListener('click', () => menu.classList.toggle('show'));
-
-     const track = document.getElementById('promosTrack');
-    const cards = track ? Array.from(track.querySelectorAll('.promo-card')) : [];
-    const prevBtn = document.querySelector('.promos-nav.prev');
-    const nextBtn = document.querySelector('.promos-nav.next');
-
-    if (track && cards.length && prevBtn && nextBtn) {
-      let currentIndex = 0;
-      let autoTimer;
-
-      const getGap = () => {
-        const styles = getComputedStyle(track);
-        const gapValue = parseFloat(styles.columnGap || styles.gap || '0');
-        return Number.isNaN(gapValue) ? 0 : gapValue;
-      };
-
-      const getStep = () => {
-        const firstCard = cards[0];
-        if (!firstCard) return 0;
-        const cardWidth = firstCard.getBoundingClientRect().width;
-        return cardWidth + getGap();
-      };
-
-      const getVisibleCount = () => {
-        const step = getStep();
-        if (!step) return 1;
-        return Math.max(1, Math.round(track.clientWidth / step));
-      };
-
-      const clampIndex = (index) => {
-        const visible = getVisibleCount();
-        const maxIndex = Math.max(0, cards.length - visible);
-        if (index < 0) return maxIndex;
-        if (index > maxIndex) return 0;
-        return index;
-      };
-
-      const goToIndex = (index, behavior = 'smooth') => {
-        const step = getStep();
-        if (!step) return;
-        currentIndex = clampIndex(index);
-        const target = step * currentIndex;
-        track.scrollTo({ left: target, behavior });
-      };
-
-      const restartTimer = () => {
-        clearInterval(autoTimer);
-        autoTimer = setInterval(() => goToIndex(currentIndex + 1), 6000);
-      };
-
-      const updateIndexFromScroll = () => {
-        const step = getStep();
-        if (!step) return;
-        currentIndex = Math.round(track.scrollLeft / step);
-      };
-
-      const goNext = () => {
-        goToIndex(currentIndex + 1);
-        restartTimer();
-      };
-
-      const goPrev = () => {
-        goToIndex(currentIndex - 1);
-        restartTimer();
-      };
-
-      prevBtn.addEventListener('click', goPrev);
-      nextBtn.addEventListener('click', goNext);
-
-      const pauseAuto = () => clearInterval(autoTimer);
-      const resumeAuto = () => restartTimer();
-
-      ['mousedown', 'mouseenter', 'focusin'].forEach((evt) => {
-        track.addEventListener(evt, pauseAuto);
-      });
-
-      ['mouseup', 'mouseleave', 'focusout'].forEach((evt) => {
-        track.addEventListener(evt, resumeAuto);
-      });
-
-      track.addEventListener('touchstart', pauseAuto, { passive: true });
-      track.addEventListener('touchend', resumeAuto, { passive: true });
-
-      track.addEventListener('scroll', () => {
-        updateIndexFromScroll();
-      }, { passive: true });
-
-      window.addEventListener('resize', () => {
-        updateIndexFromScroll();
-        goToIndex(currentIndex, 'auto');
-        restartTimer();
-      });
-
-      goToIndex(0, 'auto');
-      restartTimer();
-    }
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="0; url=index.html" />
+    <title>El Mexiquense Market</title>
+  </head>
+  <body>
+    <p>Si no eres redirigido automáticamente, visita <a href="index.html">nuestra página principal</a>.</p>
+  </body>
 </html>
