--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
           <div class="promo-body">
             <span class="badge">PROMOCIÓN</span>
             <h3 class="promo-title">¡Miercolazo de Descuento!</h3>
-            <p class="promo-text">🎉 ¡Llega el Miercolazo de Descuento en El Mexiquense! 🎉
-¿Ya conoces el Miercolazo? Todos los miércoles te sorprendemos con promociones exclusivas que no querrás perderte. 🥳 ¡Cada semana es una nueva aventura de sabores y ahorros!</p>
+            <p class="promo-text">🎉 ¡VEN a el Miercolazo de Descuento en El Mexiquense! 🎉
+ 🥳 ¡Cada semana es una nueva aventura de sabores y ahorros! Todos los miercoles tenemos promociones diferentes.</p>
             <a class="btn promo-cta" href="#ofertas">Ver ofertas</a>
           </div>
         </article>
