--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="promo-body">
             <span class="badge">PROMOCIÓN</span>
             <h3 class="promo-title">¡Miercolazo de Descuento!</h3>
-            <p class="promo-text">🎉 ¡VEN a el Miercolazo de Descuento en El Mexiquense! 🎉
+            <p class="promo-text">🎉 En El Mexiquense! 🎉
  🥳 ¡Cada semana es una nueva aventura de sabores y ahorros! Todos los miercoles tenemos promociones diferentes.</p>
             <a class="btn promo-cta" href="#ofertas">Ver ofertas</a>
           </div>
