Update recipes hero description
Removed the reference to Cardenas Markets from the description.

--- a/recetas/index.html
+++ b/recetas/index.html
@@ -489,7 +489,7 @@
         <div class="recipes-hero__content">
           <span class="recipes-hero__eyebrow">Recetario</span>
           <h1 id="recetas-title" class="recipes-hero__title">Todas las recetas de El Mexiquense</h1>
-          <p class="recipes-hero__description">Explora bebidas, platillos típicos y postres listos para sorprender a tu familia. Cada visita te recibe con nuevas ideas inspiradas en el banner de Cardenas Markets.</p>
+          <p class="recipes-hero__description">Explora bebidas, platillos típicos y postres listos para sorprender a tu familia.</p>
           <div class="recipes-hero__actions">
             <a class="btn btn-outline" href="../index.html#recetas">Volver al inicio</a>
           </div>
