--- a/recetas/index.html
+++ b/recetas/index.html
@@ -504,7 +504,7 @@
           <div>
             <span>Recetario completo</span>
             <h2 id="recetas-collection-title">Explora cada preparación</h2>
-            <p>Consulta tiempos, etiquetas y vínculos a los pasos completos de cada platillo. Guarda tus favoritos para la próxima reunión familiar.</p>
+            <p>Consulta tiempos, productos y todos los pasos completos de cada platillo. Guarda tus favoritos para la próxima reunión familiar.</p>
           </div>
         </div>
         <div class="recipes-grid" id="recipesList" role="list" aria-live="polite"></div>
@@ -548,9 +548,9 @@
           '1 taza de jugo de naranja natural',
           '1/2 taza de refresco de cola',
           '4 dientes de ajo machacados',
-          '1 hoja de laurel',
-          '1 cucharada de sal gruesa',
-          'Aceite o manteca suficiente para dorar'
+          '1 hoja de laurel de el mexiquense',
+          '1 cucharada de sal morton kosher',
+          'Aceite Mazola o manteca de cerdo por libra suficiente para dorar'
         ],
         steps: [
           'Corta la carne en trozos grandes y sécala con toallas de papel para obtener un dorado uniforme.',
@@ -559,7 +559,7 @@
           'Destapa, aumenta a fuego medio-alto y permite que la carne se dore en su propia grasa hasta quedar crujiente.',
           'Sirve caliente dentro de tortillas con cilantro, cebolla y salsa al gusto.'
         ],
-        tips: 'Acompaña con frijoles refritos y rábanos frescos para equilibrar la grasa.'
+        tips: 'Acompaña con frijoles refritos de la costeña y rábanos frescos para equilibrar.'
       },
       {
         title: 'Camarones a la diabla',
