--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
         <!-- Card 1 -->
         <article class="promo-card">
           <div class="promo-media" aria-hidden="true">
-            <img src="https://img.freepik.com/vector-premium/oferta-limitada-banner-venta-reloj-banner-plantilla-fondo-blanco_1152642-83.jpg"
+            <img src="https:https://www.instagram.com/p/DQSaOPgj__I/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                  alt="Promoción de ofertas exclusivas — productos frescos" loading="lazy">
           </div>
           <div class="promo-body">
