--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
         <!-- Card 1 -->
         <article class="promo-card">
           <div class="promo-media" aria-hidden="true">
-            <img src="https:https://www.instagram.com/p/DQSaOPgj__I/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+            <img src="https://assets.grok.com/users/ffc00475-b8da-4ceb-acac-8f96d3ecd3cc/5bf4010e-b8d0-408d-bdd7-4ad06f574933/content"
                  alt="Promoción de ofertas exclusivas — productos frescos" loading="lazy">
           </div>
           <div class="promo-body">
